--- a/calc.html
+++ b/calc.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Calculator</title>
+		<link rel="stylesheet" href="calc.css" />
+		<script src="calc.js" defer></script>
 	</head>
 	<body>
 		<div class="calc-body">
@@ -11,7 +13,7 @@
 			<div class="button-container">
 				<button value="9">9</button>
 				<button value="6">6</button>
-				<button value="5">3</button>
+				<button value="3">3</button>
 				<button class="gray" value="C">C</button>
 				<button value="8">8</button>
 				<button value="5">5</button>
